Added filters to resources and log messages to cache loading